fix jumping fitler container

--- a/src/components/FriendsCards/FriendsCards.module.scss
+++ b/src/components/FriendsCards/FriendsCards.module.scss
@@ -6,6 +6,7 @@
   width: 700px;
   height: 735px;
   padding: 35px 15px 20px 15px;
+  margin-left: 120px;
 }
 
 .content {
