--- a/src/components/NewFriendCards/NewFriendCards.module.scss
+++ b/src/components/NewFriendCards/NewFriendCards.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-left: 80px;
   width: 700px;
   height: 735px;
   padding: 35px 15px 20px 15px;
