--- a/src/pages/FriendsPage/FriendsPage.module.scss
+++ b/src/pages/FriendsPage/FriendsPage.module.scss
@@ -1,7 +1,5 @@
 .container {
   display: flex;
-  justify-content: space-between;
-  flex-direction: row;
   margin: auto;
   width: 1150px;
   padding: 60px 0;
